// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> Debe de mostrar el componente correctamente 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <form
    aria-label="form"
  >
    <p />
    <input
      id="gif-input"
      type="text"
      value=""
    />
    <button
      class="btn"
      type="submit"
    >
      Agregar
    </button>
  </form>
  <hr />
  <ol />
</div>
`;

exports[`Pruebas en <GifExpertApp /> Debe mostrar una lista de categorías 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <form
    aria-label="form"
  >
    <p />
    <input
      id="gif-input"
      type="text"
      value=""
    />
    <button
      class="btn"
      type="submit"
    >
      Agregar
    </button>
  </form>
  <hr />
  <ol>
    <h3
      class="animate__animated animate__fadeIn"
    >
      One Punch
    </h3>
    <p
      class="animate__animated animate__flash"
    >
      Loading
    </p>
    <div
      class="card-grid"
    />
    <h3
      class="animate__animated animate__fadeIn"
    >
      Dragon Ball
    </h3>
    <p
      class="animate__animated animate__flash"
    >
      Loading
    </p>
    <div
      class="card-grid"
    />
  </ol>
</div>
`;
